# virtual_collections.h

./: CMakeLists.txt  README.md  xmake.lua
Specs/: SpecHelper.h  VirtualArray.Spec.cpp  VirtualMap.Const.Spec.cpp  VirtualMap.Default.Spec.cpp  VirtualMap.Lazy.Spet.cpp  VirtualMap.Spec.cpp  VirtualSet.Const.Spec.cpp  VirtualSet.Default.Spec.cpp  VirtualSet.Lazy.Spec.cpp  VirtualSet.Spec.cpp  VirtualTypedArray.Spec.cpp  VirtualTypedMap.Spec.cpp  VirtualTypedSet.Spec.cpp  xmake.lua
Specs/Templates/: ArrayExamples.Template.cpp  MapExamples.Template.cpp  SetExamples.Template.cpp
include/: virtual_collections.h
include/virtual_collections/: array.h  const_map.h  const_set.h  interfaces.h  lazy_map.h  lazy_set.h  map.h  set.h  virtual_array.h  virtual_map.h  virtual_set.h
include/virtual_collections/Implementations/: VirtualArray.h  VirtualConstMap.h  VirtualConstSet.h  VirtualLazyMap.h  VirtualLazySet.h  VirtualMap.h  VirtualSet.h
include/virtual_collections/Implementations/Maps/: BooleanKeyMap.h  FloatingPointKeyMap.h  IntegralKeyMap.h  PointerKeyMap.h  StringKeyMap.h
include/virtual_collections/Implementations/Sets/: BooleanKeySet.h  FloatingPointKeySet.h  IntegralKeySet.h  PointerKeySet.h  StringKeySet.h
include/virtual_collections/Interfaces/: IBooleanKeyMap.h  IBooleanKeySet.h  IFloatingPointKeyMap.h  IFloatingPointKeySet.h  IIntegralKeyMap.h  IIntegralKeySet.h  IPointerKeyMap.h  IPointerKeySet.h  IStringKeyMap.h  IStringKeySet.h  IVirtualArray.h  IVirtualCollection.h  IVirtualMap.h  IVirtualSet.h
